Bug 511802 - KCM doesn't recognize path to program / script to run if it contains spaces
Summary: KCM doesn't recognize path to program / script to run if it contains spaces
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-08 02:18 UTC by Alexander Wilms
Modified: 2026-01-04 08:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Command with space in path (73.74 KB, image/png)
2025-11-08 02:18 UTC, Alexander Wilms
Details
Command without space in path (73.14 KB, image/png)
2025-11-08 02:19 UTC, Alexander Wilms
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Wilms 2025-11-08 02:18:49 UTC
Created attachment 186602 [details]
Command with space in path

SUMMARY
One cannot select a shell script in the Edit Task view if the path contains a space

STEPS TO REPRODUCE
1. Open Task Scheduler KCM
2. Click Add...
3. Select a script with a space in its path
4. Select a script without a space in its path

OBSERVED RESULT
If there's a space in the path, the error message "Choose a program to run" is shown

EXPECTED RESULT
Both work

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20251031
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Alexander Wilms 2025-11-08 02:19:07 UTC
Created attachment 186603 [details]
Command without space in path
Comment 2 Bug Janitor Service 2025-11-16 12:52:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/kcron/-/merge_requests/46
Comment 3 Alexander Wilms 2026-01-04 08:14:38 UTC
Git commit 60c3e3a6624976ba710455f3415e0067826c0599 by Alexander Wilms.
Committed on 04/01/2026 at 00:18.
Pushed by mlaurent into branch 'master'.

Handle command paths that contain spaces
Signed-off-by: Alexander Wilms <f.alexander.wilms@gmail.com>

M  +1    -1    src/crontablib/cttask.cpp
M  +53   -3    src/ui/TaskPage.qml

https://invent.kde.org/system/kcron/-/commit/60c3e3a6624976ba710455f3415e0067826c0599