Handle command paths that contain spaces

BUG:511802
Signed-off-by: Alexander Wilms <f.alexander.wilms@gmail.com>